<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Therapy Translator</string>
	<string name="button_send_1">Good Morning</string>
	<string name="button_send_2">Have Pain?</string>
	<string name="button_send_3">Show Pain</string>	
	<string name="button_send_4">Raise Leg</string>
	<string name="button_send_5">More Strength</string>
	<string name="button_send_6">Straighten Leg</string>
	<string name="button_send_7">Bend Leg</string>
	<string name="button_send_8">Pull Toes Up</string>
	<string name="button_send_9">Push Feet Down</string>
	<string name="button_send_10">Same Feeling</string>
	<string name="button_send_11">Thank You Goodbye</string>
</resources>
<!--<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Therapy Translator</string>
	<string "button_send">Good Morning</string>
	<string name="app_name">My First App</string>
	<string name="edit_message">Enter a message</string>
	<string name="button_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
		<string "button_send_2">Have Pain?</string>
	<string "button_send_3">Show Pain?</string>	
	<string "button_send_4">Raise Leg</string>
	<string "button_send_5">More Strength</string>
	<string "button_send_6">Straighten Leg</string>
	<string "button_send_7">Bend Leg</string>
	<string "button_send_8">Pull Toes Up</string>
	<string "button_send_9">Push Feet Down</string>
	<string "button_send_10">Same Feeling</string>
	<string "button_send_11">Thank You Goodbye</string>
	<string "button_send_12">Have Pain?</string>
</resources>
-->







