<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
    android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_1"
		android:onClick="sendMessage_1" /> 
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_2"
		android:onClick="sendMessage_2" />
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_3"
		android:onClick="sendMessage_3" />
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_4" 
		android:onClick="sendMessage_4"	/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_5"
		android:onClick="sendMessage_5" />	
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_6" 
		android:onClick="sendMessage_6" />
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_7"
		android:onClick="sendMessage_7" />	
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_8"
		android:onClick="sendMessage_8" />
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_9"
		android:onClick="sendMessage_9" />	
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_10"
		android:onClick="sendMessage_10" />
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/button_send_11"
		android:onClick="sendMessage_11" />
</LinearLayout>














<!-- Old XML
	 <?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Hello World, MainActivity"
    />
</LinearLayout>
-->
